03-service-ingress.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: traefik
  #name: my-svc-1
  name: alpaca-prod-svc
spec:
  selector:
    app: alpaca
  ports:
  - port: 80 
    targetPort: 8080
  externalIPs:
  - 192.168.83.101
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: traefik
  name: ingress-ms-1
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: alpaca.int
    http:
      paths:
      - backend:
          serviceName: alpaca-prod-svc
          servicePort: 80
